# pygame_entities

./: .gitignore  README-ru.md  pyproject.toml  setup.cfg
pygame-entities/: game.py
pygame-entities/entities/: mixins.py
pygame-entities/utils/: drawable.py
pygame_entities/: game.py
pygame_entities/entities/: entity.py  mixins.py
pygame_entities/utils/: collision_side.py  drawable.py  math.py  spritesheets.py  vector.py
src/entities/: entity.py
src/examples/: top_down_movement_example.py
src/utils/: math.py  vector.py
