[project]
name = "pygame_entities"
version = "0.0.1"
authors = [
  { name="Sarygin Rodion", email="sarygin.rodion7@gmail.com" },
]
description = "Adding entities to pygame"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ['pygame >= 2.1.2']

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"