[metadata]
name = pygame_entities
version = 0.0.1
author = Sarygin Rodion
author_email = sarygin.rodion7@gmail.com
description = Adding some sort of entities system to pygame
long_description = file: README.metadata
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = pygame_entities, pygame_entities.utils, pygame_entities.entities
install_requires =
    pygame >=2.1.2
python_requires = >=3.7
include_package_data = True